<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">今日头条</string>
    <string name="info_confirm_to_exit">确定要退出今日头条?</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CAMERA">相机</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CONTACT">通讯录</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_EXTERNAL_STORAGE">存储</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_LOCATION">位置信息</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_READ_PHONE_STATE">拨打电话</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_RECORD_AUDIO">麦克风</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_SMS">短信</string>
    <string name="account_account_logout">退出登录</string>
    <string name="account_auth_and_login">验证登录</string>
    <string name="account_auth_code_error">验证码错误</string>
    <string name="account_auto_register_hint">未注册的用户会自动注册</string>
    <string name="account_auto_register_tips">未注册手机验证后自动注册</string>
    <string name="account_avatar_upload_fail">头像上传失败</string>
    <string name="account_btn_cancel">取消</string>
    <string name="account_btn_ok">确定</string>
    <string name="account_change_password_hint">修改密码：&lt;我>-&lt;设置>-&lt;帐号管理></string>
    <string name="account_commit">提交</string>
    <string name="account_complete_with_space">完 成</string>
    <string name="account_confirm_and_logout">确定并退出</string>
    <string name="account_confirm_btn_txt">进入头条</string>
    <string name="account_confirm_give_up_register">确认放弃登录？</string>
    <string name="account_confirm_to_use_default_name">确认使用头条默认用户名“%s”？</string>
    <string name="account_continue_register">继续登录</string>
    <string name="account_desc_dialog_title">修改签名</string>
    <string name="account_desc_of_pgc_bottom_tips">10-30个汉字</string>
    <string name="account_desc_same_as_last">与原来介绍相同</string>
    <string name="account_dialog_title_default">"登录你的头条
精彩永不丢失"</string>
    <string name="account_dialog_title_favor">"登录并同步收藏
云端永久保存！"</string>
    <string name="account_dialog_title_pgc_like">"登录并同步关注
云端永久保存！"</string>
    <string name="account_dialog_title_register">"登录后保存阅读习惯
打造你的专属头条"</string>
    <string name="account_free_password_login">验证码登录</string>
    <string name="account_give_up">放弃</string>
    <string name="account_give_up_original_account">放弃原账号</string>
    <string name="account_go_to_modify">去修改</string>
    <string name="account_has_sent_auth_code">已向手机%s发送验证码</string>
    <string name="account_input_auth_code">输入验证码</string>
    <string name="account_item_desc">介绍</string>
    <string name="account_item_gender">性别</string>
    <string name="account_item_head">头像</string>
    <string name="account_left_number">剩余%1$d字</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_manager_bind_third_tips">社交平台账号绑定</string>
    <string name="account_manager_bind_title">账号和绑定设置</string>
    <string name="account_manager_change_profile_back_img">更换个人主页背景</string>
    <string name="account_manager_edit_profile">编辑资料</string>
    <string name="account_manager_profile_verify_tips">个人资料每月只能修改一次，且需要经过审核</string>
    <string name="account_manager_save_profile">保存</string>
    <string name="account_manager_save_profile_tips">每个月只能修改一次，确认保存修改后的资料吗?</string>
    <string name="account_manager_verify_status">审核中</string>
    <string name="account_mobile_num_error">手机号错误</string>
    <string name="account_modify_left_number">-%1$d</string>
    <string name="account_more_login_ways">更多登录方式</string>
    <string name="account_need_password_tips">尚未设置密码，为保证安全，将验证手机号并设置密码</string>
    <string name="account_no_account_error">手机号尚未注册，是否免密码快捷登录？</string>
    <string name="account_password_error">密码错误</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="account_previous">上一步</string>
    <string name="account_quick_dialog_title_default">登录你的专属头条</string>
    <string name="account_quick_dialog_title_favor">登录后收藏永不丢失</string>
    <string name="account_quick_dialog_title_pgc_like">登录后关注永久保存</string>
    <string name="account_quick_dialog_title_post">登录后立即畅谈</string>
    <string name="account_quick_dialog_title_social">登录关注更多好友动态</string>
    <string name="account_quick_login_mobile">手机登录</string>
    <string name="account_quick_login_more_login">更多登录方式</string>
    <string name="account_quick_login_qq">QQ登录</string>
    <string name="account_quick_login_weibo">微博登录</string>
    <string name="account_quick_login_weixin">微信登录</string>
    <string name="account_register_tips">"云端同步兴趣
精彩收藏永不丢失"</string>
    <string name="account_resend_auth_code">再次向手机%s发送验证码？</string>
    <string name="account_send_auth_code">发送验证码</string>
    <string name="account_set_password">设置密码</string>
    <string name="account_set_password_success">密码设置成功</string>
    <string name="account_skip">跳过</string>
    <string name="account_update_desc_success">签名修改成功</string>
    <string name="account_update_user_name_success">修改用户名成功</string>
    <string name="account_upload_avatar_fail">头像修改失败,请稍后再试</string>
    <string name="account_upload_avatar_success">头像修改成功</string>
    <string name="account_use">使用</string>
    <string name="account_verify">验证</string>
    <string name="account_verify_mobile_num">验证手机号</string>
    <string name="action_add_to_desktop">添加到桌面</string>
    <string name="action_alipay_share">支付宝好友</string>
    <string name="action_alishq_share">支付宝生活圈</string>
    <string name="action_copy">复制正文</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_day_mode">日间模式</string>
    <string name="action_dd_share">钉钉好友</string>
    <string name="action_dislike">不感兴趣</string>
    <string name="action_edit">编辑</string>
    <string name="action_favor">收藏</string>
    <string name="action_follow_pgc">关注</string>
    <string name="action_font_setting">显示设置</string>
    <string name="action_forward">一键分享</string>
    <string name="action_html_share">转发内容</string>
    <string name="action_increase">+1</string>
    <string name="action_kaixin_share">开心网</string>
    <string name="action_mail_share">邮件</string>
    <string name="action_message_share">短信</string>
    <string name="action_my_update">我的动态</string>
    <string name="action_mz_unfavor">取消收藏</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_qq_share">QQ好友</string>
    <string name="action_qzone_share">QQ空间</string>
    <string name="action_renren_share">人人网</string>
    <string name="action_report">举报</string>
    <string name="action_system_share">转发链接</string>
    <string name="action_tecent_share">腾讯微博</string>
    <string name="action_unfollow_pgc">取消关注</string>
    <string name="action_view_pgc">查看头条号</string>
    <string name="action_weibo_share">新浪微博</string>
    <string name="action_weixin_share">微信好友</string>
    <string name="action_weixin_timeline">微信朋友圈</string>
    <string name="actionad_action_text">立即拨打</string>
    <string name="ad_download_permission_denied">您已禁止使用存储权限，请授权后再下载</string>
    <string name="ad_label_detail">查看详情</string>
    <string name="ad_label_info">广告</string>
    <string name="ad_label_new">广告</string>
    <string name="add_more_pgc_follow">关注更多头条号</string>
    <string name="add_more_pgc_subscribe">订阅更多头条号</string>
    <string name="add_pgc_follow">添加关注</string>
    <string name="add_pgc_subscribe">添加订阅</string>
    <string name="add_tag_hint">添加问题标签(必填)</string>
    <string name="add_tag_max_limit">最多添加5个标签，点击删除标签</string>
    <string name="add_tag_min_limit">至少添加1个标签</string>
    <string name="add_tag_title">添加标签</string>
    <string name="add_to_desktop_success">添加成功</string>
    <string name="add_topic">转发到话题</string>
    <string name="adsapp_button_cancel">取消</string>
    <string name="adsapp_button_download">免费下载</string>
    <string name="adsapp_button_web">网页体验</string>
    <string name="adsapp_tip_app">您尚未安装 %1$s,是否免费下载?</string>
    <string name="adsappitem_download_info">要下载 %1$s 吗？%2$s</string>
    <string name="adsappitem_download_this_app">这个应用</string>
    <string name="album">相册</string>
    <string name="album_bucket_title">相册</string>
    <string name="album_bucket_title_image">图片相册</string>
    <string name="album_bucket_title_media">所有照片</string>
    <string name="album_bucket_title_video">视频相册</string>
    <string name="album_count_prefix">个视频</string>
    <string name="album_empty_photo_sub_text">可以使用相机拍摄照片</string>
    <string name="album_empty_photo_text">无照片</string>
    <string name="album_empty_photo_video_sub_text">可以使用相机拍摄照片和视频</string>
    <string name="album_empty_photo_video_text">无视频或照片</string>
    <string name="album_empty_video_sub_text">可以使用相机拍摄视频</string>
    <string name="album_empty_video_text">无视频</string>
    <string name="album_image_delete">图片已删除</string>
    <string name="album_image_max_message">最多选择%d张照片</string>
    <string name="album_pic_num">(%d)</string>
    <string name="album_send_original">原图</string>
    <string name="album_send_original_size">原图(%1$sM)</string>
    <string name="album_title_prefix">合辑：%s</string>
    <string name="catalog">目录（共%d章）</string>
    <string name="friends_are_viewing">和朋友们一起看头条</string>
    <string name="hwpush_collect">收藏</string>
    <string name="hwpush_forward">前进</string>
    <string name="hwpush_goback">后退</string>
    <string name="hwpush_refresh">刷新</string>
    <string name="login_tip">请先登录后再发表内容</string>
    <string name="mine_item_activity">活 动</string>
    <string name="mine_item_favorite">收藏</string>
    <string name="mine_item_feedback">用户反馈</string>
    <string name="mine_item_night_mode">夜间</string>
    <string name="mine_item_notification">消息通知</string>
    <string name="mine_item_pgc">作品管理</string>
    <string name="mine_item_sell">头条商城</string>
    <string name="mine_item_sell_introduce">特卖、头彩、电影</string>
    <string name="mine_item_settings">系统设置</string>
    <string name="next_chapter">下一章</string>
    <string name="pre_chapter">上一章</string>
    <string name="report_dialog_back">返回</string>
    <string name="report_dialog_comment">我要吐槽</string>
    <string name="report_dialog_comment_hint">请具体说明问题，我们将尽快处理</string>
    <string name="report_dialog_done">完成</string>
    <string name="report_dialog_report_article_title">举报文章问题</string>
    <string name="tabbar_bold_text">加粗</string>
    <string name="tabbar_order_list_text">有序列表</string>
    <string name="tabbar_reference_text">“引用”</string>
    <string name="tabbar_title_text">标题</string>
    <string name="tabbar_under_line_text">下划线</string>
    <string name="tabbar_unorder_list_text">无序列表</string>
    <string name="upload_contacts">同步通讯录</string>
    <string name="view_now">现在看看</string>
</resources>