<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ss="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/tool_bar_layout" android:background="@color/ssxinmian4" android:layout_width="fill_parent" android:layout_height="64.0dip">
        <com.bytedance.article.common.ui.DrawableButton android:id="@id/btn_favorite" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" ss:drawableTop="@drawable/my_page_favorite_selector" ss:text="@string/mine_item_favorite" ss:drawablePadding="7.0dip" ss:textColor="@color/ssxinzi2" ss:txtSize="12.0sp" style="@style/Clickable.OnlyRippleEffect" />
        <com.bytedance.article.common.ui.DrawableButton android:id="@id/btn_night_mode" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" ss:drawableTop="@drawable/my_page_nightmode_selector" ss:text="@string/mine_item_night_mode" ss:drawablePadding="7.0dip" ss:textColor="@color/ssxinzi2" ss:txtSize="12.0sp" style="@style/Clickable.OnlyRippleEffect" />
        <com.bytedance.article.common.ui.DrawableButton android:id="@id/btn_settings" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" ss:drawableTop="@drawable/my_page_settings_selector" ss:text="@string/mine_item_settings" ss:drawablePadding="7.0dip" ss:textColor="@color/ssxinzi2" ss:txtSize="12.0sp" style="@style/Clickable.OnlyRippleEffect" />
    </LinearLayout>
    <View android:id="@id/horizontal_divider_one" android:background="@drawable/my_page_divider_bg" android:layout_width="fill_parent" android:layout_height="@dimen/my_page_item_divider_height" />
    <RelativeLayout android:id="@id/layout_my_page_pgc" style="@style/my_page_item_root">
        <TextView android:id="@id/txt_my_page_pgc_name" android:text="@string/mine_item_pgc" style="@style/my_page_item_tv" />
        <ImageView android:id="@id/img_my_page_pgc_right_arrow" style="@style/my_page_item_right_arrow" />
        <View android:id="@id/my_page_pgc_divider" android:layout_alignParentBottom="true" style="@style/my_page_item_divider" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_my_page_message" style="@style/my_page_item_root">
        <TextView android:id="@id/txt_my_page_message" android:text="@string/mine_item_notification" style="@style/my_page_item_tv" />
        <com.ss.android.article.base.ui.TagView android:id="@id/tagview_my_page_message" android:visibility="invisible" android:layout_toRightOf="@id/txt_my_page_message" style="@style/my_page_tagview" />
        <ImageView android:id="@id/img_my_page_message_right_arrow" style="@style/my_page_item_right_arrow" />
        <View android:id="@id/my_page_message_divider" android:layout_alignParentBottom="true" style="@style/my_page_item_divider" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_my_page_activity" style="@style/my_page_item_root">
        <TextView android:id="@id/txt_my_page_activity" android:text="@string/mine_item_activity" style="@style/my_page_item_tv" />
        <com.ss.android.article.base.ui.TagView android:id="@id/tagview_my_page_activity" android:visibility="invisible" android:layout_toRightOf="@id/txt_my_page_activity" style="@style/my_page_tagview" />
        <ImageView android:id="@id/img_my_page_activity_right_arrow" style="@style/my_page_item_right_arrow" />
        <View android:id="@id/my_page_activity_divider" android:layout_alignParentBottom="true" style="@style/my_page_item_divider" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_my_page_sell" style="@style/my_page_item_root">
        <TextView android:id="@id/txt_my_page_sell" android:text="@string/mine_item_sell" style="@style/my_page_item_tv" />
        <ImageView android:id="@id/img_my_page_sell_right_arrow" style="@style/my_page_item_right_arrow" />
        <View android:id="@id/my_page_sell_divider" android:layout_alignParentBottom="true" style="@style/my_page_item_divider" />
        <TextView android:textSize="12.0sp" android:textColor="@color/ssxinzi3" android:id="@id/txt_my_page_sell_introduce" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/mine_item_sell_introduce" android:layout_toLeftOf="@id/img_my_page_sell_right_arrow" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/layout_dynamic" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/layout_my_page_feedback" style="@style/my_page_item_root">
        <TextView android:id="@id/txt_my_page_feedback" android:text="@string/mine_item_feedback" style="@style/my_page_item_tv" />
        <ImageView android:id="@id/img_my_page_feedback_right_arrow" style="@style/my_page_item_right_arrow" />
        <View android:id="@id/my_page_feedback_divider" android:layout_alignParentBottom="true" style="@style/my_page_item_divider" />
    </RelativeLayout>
    <View android:id="@id/horizontal_divider_three" android:background="@color/ssxinmian4" android:layout_width="fill_parent" android:layout_height="15.0dip" />
</LinearLayout>