<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="17.0sp" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/font_title_view" android:background="@drawable/tabbar_item_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tabbar_title_text" />
    <View android:background="@color/ssxinxian1" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" />
    <TextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/font_bold_view" android:background="@drawable/tabbar_item_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tabbar_bold_text" />
    <View android:background="@color/ssxinxian1" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" />
    <TextView android:textSize="17.0sp" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/font_under_line_view" android:background="@drawable/tabbar_item_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tabbar_under_line_text" />
    <View android:background="@color/ssxinxian1" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" />
    <TextView android:textSize="17.0sp" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/font_reference_view" android:background="@drawable/tabbar_item_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tabbar_reference_text" />
    <View android:background="@color/ssxinxian1" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" />
    <TextView android:textSize="17.0sp" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/font_order_list_view" android:background="@drawable/tabbar_item_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tabbar_order_list_text" />
    <View android:background="@color/ssxinxian1" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" />
    <TextView android:textSize="17.0sp" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/font_unorder_list_view" android:background="@drawable/tabbar_item_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tabbar_unorder_list_text" />
    <View android:background="@color/ssxinxian1" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" />
</LinearLayout>