<?xml version="1.0" encoding="utf-8"?>
<merge android:id="@id/catalog_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/novel_catalog_text_color" android:gravity="center_vertical" android:id="@id/txt_pre_chapter" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/pre_chapter" />
    <TextView android:textSize="16.0sp" android:textColor="@color/novel_catalog_text_color" android:gravity="center_vertical" android:id="@id/txt_catalog" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/catalog" android:layout_centerHorizontal="true" />
    <TextView android:textSize="16.0sp" android:textColor="@color/novel_catalog_text_color" android:gravity="center_vertical" android:id="@id/txt_next_chapter" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/next_chapter" android:layout_alignParentRight="true" />
    <View android:id="@id/catalog_divider" android:background="@color/ssxinxian1" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_alignParentBottom="true" />
</merge>