<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_report_comment_root" android:background="@color/report_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_dialog_header" android:background="@color/report_dialog_bg" android:paddingTop="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/layout_dialog_back" android:layout_width="wrap_content" android:layout_height="44.0dip" android:layout_marginLeft="30.0dip">
            <ImageView android:id="@id/img_dialog_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/all_arrow_unlike_selector" />
            <TextView android:textSize="16.0sp" android:textColor="@color/ssxinzi1" android:id="@id/txt_dialog_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/report_dialog_back" />
        </LinearLayout>
        <TextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/txt_adapter_header_title" android:layout_width="wrap_content" android:layout_height="44.0dip" android:text="@string/report_dialog_comment" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <EditText android:textSize="14.0sp" android:textColor="@color/ssxinzi1" android:gravity="center|left|top" android:id="@id/edit_report_comment" android:background="@drawable/bg_dialog_input_user_info" android:paddingLeft="10.0dip" android:paddingTop="12.0dip" android:paddingRight="10.0dip" android:paddingBottom="28.0dip" android:layout_width="fill_parent" android:layout_height="80.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/report_dialog_comment_hint" android:textCursorDrawable="@drawable/text_cursor_user_info" />
    <TextView android:textSize="15.0sp" android:textColor="@color/ssxinzi7" android:gravity="center" android:layout_gravity="right" android:id="@id/txt_done" android:background="@drawable/selector_user_info_confirm" android:clickable="true" android:layout_width="56.0dip" android:layout_height="26.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="9.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="9.0dip" android:text="@string/report_dialog_done" />
</LinearLayout>