<?xml version="1.0" encoding="utf-8"?>
<im.quar.autolayout.view.AutoRelativeLayout android:id="@id/content_view" android:background="@drawable/account_quick_login_bg" android:paddingLeft="60.0px" android:paddingRight="60.0px" android:clipToPadding="false" android:layout_width="540.0px" android:layout_height="680.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.ss.android.common.ui.view.AlphaImageView android:id="@id/img_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0px" android:layout_marginRight="-44.0px" android:src="@drawable/account_quick_login_close" android:scaleType="centerInside" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <TextView android:textSize="32.0px" android:textColor="@color/ssxinzi1" android:id="@id/login_top_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="110.0px" android:text="@string/login_tip" android:layout_centerHorizontal="true" />
    <im.quar.autolayout.view.AutoLinearLayout android:orientation="vertical" android:layout_width="420.0px" android:layout_height="wrap_content" android:layout_marginTop="224.0px">
        <com.ss.android.common.ui.view.AlphaRelativeLayout android:id="@id/mobile_login" android:background="@drawable/account_quick_login_mobile_login" android:layout_width="420.0px" android:layout_height="80.0px">
            <ImageView android:id="@id/image_mobile_login" android:src="@drawable/account_quick_login_mobile" style="@style/account_quick_login_left_image" />
            <TextView android:textColor="@color/account_quick_login_mobile" android:text="@string/account_quick_login_mobile" style="@style/account_quick_login_text" />
        </com.ss.android.common.ui.view.AlphaRelativeLayout>
        <com.ss.android.common.ui.view.AlphaRelativeLayout android:id="@id/weixin_login" android:background="@drawable/account_quick_login_weixin_login" android:layout_width="420.0px" android:layout_height="80.0px" android:layout_marginTop="24.0px">
            <ImageView android:id="@id/image_weixin_login" android:src="@drawable/account_quick_login_weixin" style="@style/account_quick_login_left_image" />
            <TextView android:textColor="@color/account_quick_login_weixin" android:text="@string/account_quick_login_weixin" style="@style/account_quick_login_text" />
        </com.ss.android.common.ui.view.AlphaRelativeLayout>
        <com.ss.android.common.ui.view.AlphaRelativeLayout android:id="@id/qq_login" android:background="@drawable/account_quick_login_qq_login" android:layout_width="420.0px" android:layout_height="80.0px" android:layout_marginTop="24.0px">
            <ImageView android:id="@id/image_qq_login" android:src="@drawable/account_quick_login_qq" style="@style/account_quick_login_left_image" />
            <TextView android:textColor="@color/account_quick_login_qq" android:text="@string/account_quick_login_qq" style="@style/account_quick_login_text" />
        </com.ss.android.common.ui.view.AlphaRelativeLayout>
        <com.ss.android.common.ui.view.AlphaRelativeLayout android:id="@id/weibo_login" android:background="@drawable/account_quick_login_weibo_login" android:visibility="gone" android:layout_width="420.0px" android:layout_height="80.0px" android:layout_marginTop="24.0px">
            <ImageView android:id="@id/image_weibo_login" android:src="@drawable/account_quick_login_weibo" style="@style/account_quick_login_left_image" />
            <TextView android:textColor="@color/account_quick_login_weibo" android:text="@string/account_quick_login_weibo" style="@style/account_quick_login_text" />
        </com.ss.android.common.ui.view.AlphaRelativeLayout>
    </im.quar.autolayout.view.AutoLinearLayout>
    <com.ss.android.common.ui.view.AlphaLinearLayout android:id="@id/more_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="566.0px" android:layout_centerHorizontal="true">
        <TextView android:textSize="28.0px" android:textColor="@color/ssxinzi1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_quick_login_more_login" />
        <ImageView android:layout_gravity="center_vertical" android:paddingLeft="10.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/all_card_arrow" />
    </com.ss.android.common.ui.view.AlphaLinearLayout>
</im.quar.autolayout.view.AutoRelativeLayout>