<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/content_view" android:background="@drawable/contact_guide_bg" android:paddingBottom="24.0dip" android:layout_width="270.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/close" android:background="@drawable/popup_new_close" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <ImageView android:id="@id/image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:src="@drawable/friends_are_reading" android:layout_centerHorizontal="true" />
    <TextView android:textSize="14.0sp" android:textColor="@color/ssxinzi3" android:gravity="center" android:id="@id/text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/upload_contacts" android:maxLines="1" android:layout_below="@id/image" android:layout_centerHorizontal="true" />
    <TextView android:textSize="17.0sp" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/friends_are_viewing" android:maxLines="2" android:layout_below="@id/text1" android:layout_centerHorizontal="true" />
    <Button android:textSize="15.0sp" android:textColor="@color/ssxinzi7" android:id="@id/confirm" android:background="@drawable/contacts_btn_red_selector" android:layout_width="216.0dip" android:layout_height="44.0dip" android:layout_marginTop="50.0dip" android:text="@string/view_now" android:layout_below="@id/text2" android:layout_centerHorizontal="true" />
</RelativeLayout>