<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_report_root" android:background="@color/report_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_dialog_header" android:background="@color/report_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/layout_dialog_back" android:layout_width="wrap_content" android:layout_height="44.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip">
            <ImageView android:id="@id/img_dialog_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/all_arrow_unlike_selector" />
            <TextView android:textSize="16.0sp" android:textColor="@color/ssxinzi1" android:id="@id/txt_dialog_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/report_dialog_back" />
        </LinearLayout>
        <TextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="@color/ssxinzi1" android:gravity="center" android:id="@id/txt_adapter_header_title" android:layout_width="wrap_content" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/report_dialog_report_article_title" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView android:id="@id/recycler_view" android:paddingBottom="48.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_dialog_header" />
    <TextView android:textSize="17.0sp" android:textColor="@color/zi1" android:gravity="center" android:id="@id/txt_done" android:background="@drawable/action_dialog_cancel_btn_bg" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/report_dialog_done" android:layout_alignBottom="@id/recycler_view" />
    <View android:id="@id/divider" android:background="@color/ssxinxian1" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_above="@id/txt_done" />
</RelativeLayout>